src/main/java/com/example/currencyexchangerate/currency_exchange_rate_spring/error/ResourceNotFoundException.java
package com.example.currencyexchangerate.currency_exchange_rate_spring.error;

public class ResourceNotFoundException extends Exception{
  public ResourceNotFoundException(String message){
    super(message);
  }
}
